Added my own workout and user - update mesocycle to have phase and rir
